--- a/index.html
+++ b/index.html
@@ -543,13 +543,13 @@ Acerte mais. Lucro maior. Menos esforço.</p>
             </a>
             <div class="image-carousel-container">
                 <div class="image-carousel">
-                    <img src="./IMAGENS/PROVA01.jpg" alt="Tela do Gingabot no Telegram 1" class="carousel-image">
-                    <img src="./IMAGENS/prova02.png" alt="Captura de tela de lucros Gingabot 2" class="carousel-image">
-                    <img src="./IMAGENS/prova03.png" alt="Gráfico de análises estatísticas 3" class="carousel-image">
+                    <img src="./PROVA01.jpg" alt="Tela do Gingabot no Telegram 1" class="carousel-image">
+                    <img src="./prova02.png" alt="Captura de tela de lucros Gingabot 2" class="carousel-image">
+                    <img src="./prova03.png" alt="Gráfico de análises estatísticas 3" class="carousel-image">
                     
-                    <img src="./IMAGENS/PROVA01.jpg" alt="Tela do Gingabot no Telegram 1" class="carousel-image">
-                    <img src="./IMAGENS/prova02.png" alt="Captura de tela de lucros Gingabot 2" class="carousel-image">
-                    <img src="./IMAGENS/prova03.png" alt="Gráfico de análises estatísticas 3" class="carousel-image">
+                    <img src="./PROVA01.jpg" alt="Tela do Gingabot no Telegram 1" class="carousel-image">
+                    <img src="./prova02.png" alt="Captura de tela de lucros Gingabot 2" class="carousel-image">
+                    <img src="./prova03.png" alt="Gráfico de análises estatísticas 3" class="carousel-image">
                 </div>
             </div>
         </div>
